--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@
 }
 
 .logo:hover {
-  filter: drop-shadow(0 0 1em #24c8db);
+  filter: drop-shadow(0 0 0.3rem #ffffff);
 }
 
 .row {
@@ -112,6 +112,33 @@ input[type=number] {
   color: #0f0f0f;
 }
 
+.card:hover {
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+}
+
+.card h2 {
+  font-size: 1.5em;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.card p {
+  font-size: 1.25em;
+  font-weight: 500;
+}
+
+.toast {
+  position: fixed;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 1em;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
   :root {
@@ -134,6 +161,15 @@ input[type=number] {
 
   .card {
     background-color: #0f0f0f69;
+    color: #f6f6f6;
+  }
+
+  .card:hover {
+    background-color: #0f0f0f98;
+  }
+
+  .toast {
+    background-color: #0f0f0f98;
     color: #f6f6f6;
   }
 }
